# WenDaoShanHai

./: .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  game_log.txt  main.cpp  vcpkg.json  《问道·山海》.md  开发手册.md  开发计划.md
.claude/: settings.local.json
data/: config.json  enemies.json  items.json  lifebound_treasures.json  sects.json  skills.json  talismans.json  terrains.json
src/Core/: Audio.cpp  Audio.h  AudioFactory.cpp  AudioFactory.h  BaseAudio.h  BaseFont.h  BaseTexture.h  BlankTexture.cpp  BlankTexture.h  Camera2D.cpp  Camera2D.h  CollisionSystem.cpp  CollisionSystem.h  Core.h  EventHandler.cpp  EventHandler.h  FileAudio.cpp  FileAudio.h  FileTexture.cpp  FileTexture.h  Font.cpp  Font.h  FontFactory.cpp  FontFactory.h  GameLoop.cpp  GameLoop.h  GameObjectFactory.cpp  GameObjectFactory.h  JsonLoader.cpp  JsonLoader.h  Log.cpp  Log.h  MemoryAudio.cpp  MemoryAudio.h  MemoryFont.cpp  MemoryFont.h  MemoryTexture.cpp  MemoryTexture.h  Renderer.cpp  Renderer.h  (+14 more)
src/Core/UI/: UIButton.cpp  UIButton.h  UIElement.cpp  UIElement.h  UILabel.cpp  UILabel.h  UIManager.cpp  UIManager.h  UIPanel.cpp  UIPanel.h  UIProgressBar.cpp  UIProgressBar.h
src/Game/: BigWorldScene.cpp  BigWorldScene.h  CombatAI.cpp  CombatAI.h  CombatScene.cpp  CombatScene.h  CombatUnit.cpp  CombatUnit.h  DataManager.cpp  DataManager.h  GridMap.cpp  PlayerData.h  Skill.cpp  Skill.h  WorldMap.h
src/Game/Combat/: CombatScene.cpp  CombatScene.h  CombatUnit.h  GridMap.h  TurnManager.cpp  TurnManager.h
src/Game/Core/: GameDataTypes.h  Item.h  LifeboundTreasure.h  PlayerData.h  Skill.h  Talisman.h
src/Game/Data/: DataManager.cpp  DataManager.h
src/Game/Menu/: MainMenuScene.cpp  MainMenuScene.h  SectScene.cpp  SectScene.h
src/Game/World/: BigWorldScene.cpp  BigWorldScene.h  WorldMap.cpp
